package NYT.NChunkClient.NProto;

import "yt/core/misc/guid.proto";
import "yt/ytlib/node_tracker_client/node.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqLocateChunks
{
    repeated NYT.NProto.TGuid chunk_ids = 1;
}

message TRspLocateChunks
{
    message TChunkInfo
    {
        required NYT.NProto.TGuid chunk_id = 1;
        repeated fixed32 replicas = 2;
    }

    required NNodeTrackerClient.NProto.TNodeDirectory node_directory = 1;
    repeated TChunkInfo chunks = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqAllocateWriteTargets
{
    required NYT.NProto.TGuid chunk_id = 1;

    // Node addresses (with port number!) that are not allowed to be allocated for this chunk.
    // This does not prevent further balancing to move chunk there.
    repeated string forbidden_addresses = 2;

    // Host name (without port number!) to be preferred for upload.
    // The client typically puts the name of the local host here to
    // facilitate local uploads.
    optional string preferred_host_name = 3;

    // Desired number of nodes to allocate.
    required int32 desired_target_count = 4;

    // Minimum acceptable number of nodes to allocate.
    required int32 min_target_count = 5;
}

message TRspAllocateWriteTargets
{
    required NNodeTrackerClient.NProto.TNodeDirectory node_directory = 1;
    repeated fixed32 replicas = 2;
}

////////////////////////////////////////////////////////////////////////////////
